--- a/manifest.json
+++ b/manifest.json
@@ -1,26 +1,18 @@
-{
-  "name": "熊麻吉：陪你一起成長",
-  "short_name": "熊麻吉",
-  "start_url": "/index.html",
-  "display": "standalone",
-  "background_color": "#FFE9C9",
-  "theme_color": "#F4B89A",
-  "icons": [
-    {
-      "src": "icons/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-maskable.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
-    }
-  ]
-}
+"icons": [
+  {
+    "src": "icons/bear-icon-192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  },
+  {
+    "src": "icons/bear-icon-512.png",
+    "sizes": "512x512",
+    "type": "image/png"
+  },
+  {
+    "src": "icons/bear-icon-maskable-512.png",
+    "sizes": "512x512",
+    "type": "image/png",
+    "purpose": "any maskable"
+  }
+]
